Add body containt in parallax #2

--- a/Parallax #2/index.html
+++ b/Parallax #2/index.html
@@ -21,6 +21,22 @@
 
 		<div class="body-container">
 
+			<nav id="nav-bar">
+				<ul>
+					<li>About</li>
+					<li>Services</li>
+					<li>Contact</li>
+				</ul>
+
+			</nav>
+
+			<div id="subtitle" class="subtitle hidden">POWDER MORE</div>
+
+			<div class="features">
+				<div></div>
+				<div></div>
+				<div></div>
+			</div>
 		</div>
 
 
